Vertical spacing fix on narrow view

--- a/css/global.css
+++ b/css/global.css
@@ -1038,6 +1038,17 @@ div.islandora-solr-content{
 
 @media screen and (max-width: 1740px) {
 
+  #region-content .region-content-inner {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: flex-start;
+    webkit-justify-content: flex-start;
+  }
+
   #block-system-main{
 padding-left: 0px;
 padding-right: 0px;
